More concise freeze reports
Test: N/A
Bug: N/A
Change-Id: Icb8071a6670a54db12f022d0c168e65654fb4682

GitOrigin-RevId: 4863ad121d14e05499a7114a39bc464bdc2c75ee